--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="ok">OK</string>
     <string name="change_grid_size">Change num of columns</string>
     <string name="alphabet">abcdefghijklmnopqrstuvwxyz</string>
+    <string name="install_as_system_keyboard">Install Paperboard as system keyboard</string>
 </resources>
