--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -12,4 +12,5 @@
     <string name="action_settings">Настройки</string>
     <string name="alphabet">абвгдеёжзийклмнопрстуфхцчшщъыьэюя</string>
     <string name="install_as_system_keyboard">Установить бумажную клавиатуру как системную</string>
+    <string name="change_uppercase">Символы в таблице прописные</string>
 </resources>
